--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
+    "@types/jasmine": "^6.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
     "autoprefixer": "^10.4.24",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
